--- a/events.qmd
+++ b/events.qmd
@@ -2,6 +2,15 @@
 title: "События"
 ---
 
+### Пятница с ЦЦИ: уголь (25 октября 2024)
+
+-   Состояние мировой экономики и меры экономической поддержки Китая
+-   Экспортные рынки углей и цены на уголь
+-   Рынки полувагонов и нетбэки на уголь
+
+[Материалы вебинара](events/2024-10-25-coal.qmd)
+
+
 ### Пятница с ЦЦИ: корабли с черным золотом (13 сентября 2024)
 
 -   Особенности морского путешествия российской нефти
