--- a/markets/markets-railways-van.qmd
+++ b/markets/markets-railways-van.qmd
@@ -19,18 +19,17 @@ format:
 
 *31.10.2024*
 
-**Полувагоны остановились по требованию** 
+**Полувагоны остановились по требованию**
 
-- На железнодорожной сети введены ограничения на приём к перевозке порожних вагонов; возможности операторов по предоставлению полувагонов под погрузку ограничены.
+-   На железнодорожной сети введены ограничения на приём к перевозке порожних вагонов; возможности операторов по предоставлению полувагонов под погрузку ограничены.
 
-- Погрузка каменного угля на сети РЖД в сентябре составила 25,5 млн т и обновила среднесуточный минимум с июля 2016 г. По итогам октября может быть установлен новый антирекорд.
+-   Погрузка каменного угля на сети РЖД в сентябре составила 25,5 млн т и обновила среднесуточный минимум с июля 2016 г. По итогам октября может быть установлен новый антирекорд.
 
-- Экспорт металлургического угля в западном направлении почти обнулился.
+-   Экспорт металлургического угля в западном направлении почти обнулился.
 
-- На фоне ужесточения денежно-кредитной политики Банка России среднесуточный лизинговый платёж за типовой полувагон достиг в октябре 3,5 тыс. руб./ваг.-сут. без НДС, а ставка аренды сроком на 1 год – 3,0 тыс. руб./ваг.-сут. без НДС.
+-   На фоне ужесточения денежно-кредитной политики Банка России среднесуточный лизинговый платёж за типовой полувагон достиг в октябре 3,5 тыс. руб./ваг.-сут. без НДС, а ставка аренды сроком на 1 год – 3,0 тыс. руб./ваг.-сут. без НДС.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -49,7 +48,7 @@ df$dt = as.Date(as.numeric(df$dt), origin = "1899-12-30")
 df = df[!is.na(df$value),]
 
 hc = highchart() %>% 
-   hc_add_series(df, type = "line", hcaes(x = dt, y = value), color = "#1A4AFC", name = "Ставка предоставления полувагона") %>% 
+   hc_add_series(df, type = "line", hcaes(x = dt, y = value), color = "#1A4AFC", name = "Ставка предоставления полувагона", marker = list(enabled = FALSE)) %>% 
    hc_xAxis(type = 'datetime') %>% 
    hc_yAxis(title  = list(text = 'тыс.руб./вагон')) %>% 
    hc_exporting(enabled = FALSE) %>% 
