--- a/methodology/specs-gas.qmd
+++ b/methodology/specs-gas.qmd
@@ -14,42 +14,42 @@ fig-format: svg
 
 Продукт и его характеристики
 
-+--------------+--------------------------------------------------------------------+----------------+
-| Продукт      | Характеристика                                                     | Базис поставки |
-+==============+====================================================================+================+
-| Газ          | Объемная теплота сгорания низшая: 7600 ккал/м^3^ - 8400 ккал/м^3^; | DAP            |
-|              |                                                                    |                |
-|              | Массовая доля кислорода: 0 - 0,05%;                                |                |
-|              |                                                                    |                |
-|              | Число Воббе высшее: 41 - 55 мДж/м^3^.                              |                |
-+--------------+--------------------------------------------------------------------+----------------+
-| СПГ          | Температура: - 166 °C - -157 °C;                                   | DES            |
-|              |                                                                    |                |
-|              | Плотность: 430 - 470 кг/м^3^;                                      |                |
-+--------------+--------------------------------------------------------------------+----------------+
++------------+--------------------------------------------------------------------+----------------+
+| Продукт    | Характеристика                                                     | Базис поставки |
++============+====================================================================+================+
+| Газ        | Объемная теплота сгорания низшая: 7600 ккал/м^3^ - 8400 ккал/м^3^; | DAP            |
+|            |                                                                    |                |
+|            | Массовая доля кислорода: 0 - 0,05%;                                |                |
+|            |                                                                    |                |
+|            | Число Воббе высшее: 41 - 55 мДж/м^3^.                              |                |
++------------+--------------------------------------------------------------------+----------------+
+| СПГ        | Температура: - 166 °C - -157 °C;                                   | DES            |
+|            |                                                                    |                |
+|            | Плотность: 430 - 470 кг/м^3^;                                      |                |
++------------+--------------------------------------------------------------------+----------------+
 
 ### Нефть и нефтепродукты
 
-+----------------+--------------------------------------+----------------+
-| Продукт        | Характеристика                       | Базис поставки |
-+================+======================================+================+
-| Мазут          | Кинематическая вязкость: 180;        | FOB Singapore  |
-|                |                                      |                |
-|                | Содержание серы: 3%;                 |                |
-+----------------+--------------------------------------+----------------+
-| Газойль/дизель | Содержание серы: 50 ppm;             | FOB Singapore  |
-+----------------+--------------------------------------+----------------+
-| Brent          | Плотность: API: 37,9;                |                |
-|                |                                      |                |
-|                | Cодержание серы: 0,45%               |                |
-+----------------+--------------------------------------+----------------+
++----------------+-----------------------------------+----------------+
+| Продукт        | Характеристика                    | Базис поставки |
++================+===================================+================+
+| Мазут          | Кинематическая вязкость: 180;     | FOB Singapore  |
+|                |                                   |                |
+|                | Содержание серы: 3%;              |                |
++----------------+-----------------------------------+----------------+
+| Газойль/дизель | Содержание серы: 50 ppm;          | FOB Singapore  |
++----------------+-----------------------------------+----------------+
+| Brent          | Плотность: API: 37,9;             |                |
+|                |                                   |                |
+|                | Cодержание серы: 0,45%            |                |
++----------------+-----------------------------------+----------------+
 
 #### Периодичность расчета
-Ценовые индексы на газ рассчитываются ежемесячно за исключением трубопроводного газа в Китай, цена на который оценивается на ежеквартальной основе.
 
+Ценовые индексы на газ рассчитываются ежемесячно за исключением трубопроводного газа в Китай, цена на который оценивается на ежеквартальной основе.
 
 #### Единицы измерения и преобразования
 
-долл./ тыс. м^3^  
-1 тыс. м^3^  = 36 млн БТЕ 
+долл./ тыс. м^3^\
+1 тыс. м^3^ = 36 млн БТЕ 
 1 т СПГ = 1,38 тыс. м^3^
