--- a/events/2024-10-25-coal.qmd
+++ b/events/2024-10-25-coal.qmd
@@ -14,45 +14,28 @@ lang: ru
 -   Экспортные рынки углей и цены на уголь
 -   Рынки полувагонов и нетбэки на уголь
 
-
 ### Запись вебинара
 
 1.  Есть ли надежда на Китай?
 
-```{=html}
-
-<iframe src="https://vk.com/video_ext.php?oid=-227681629&id=456239021&hd=2&autoplay=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
-
-
-```
+<iframe src="https://vk.com/video_ext.php?oid=-227681629&id=456239021&hd=2" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 
 [Ссылка](https://vk.com/video-227681629_456239021)
 
 2.  Дожди охладили жару в Индии
 
-```{=html}
-
-<iframe src="https://vk.com/video_ext.php?oid=-227681629&id=456239022&hd=2&autoplay=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
-
-```
+<iframe src="https://vk.com/video_ext.php?oid=-227681629&id=456239022&hd=2" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 
 [Ссылка](https://vk.com/video/@cci.friday?z=video-227681629_456239022%2Fpl_-227681629_-2)
 
-3.  Вьетнам - растущая надежда? 
+3.  Вьетнам - растущая надежда?
 
-```{=html}
-
-<iframe src="https://vk.com/video_ext.php?oid=-227681629&id=456239023&hd=2&autoplay=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
-```
+<iframe src="https://vk.com/video_ext.php?oid=-227681629&id=456239023&hd=2" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 
 [Ссылка](https://vk.com/video/@cci.friday/all?z=video-227681629_456239023%2Fclub227681629)
 
 4.  Российская логистика и экспорт: воз и ныне там
 
-```{=html}
-
-<iframe src="https://vk.com/video_ext.php?oid=-227681629&id=456239024&hd=2&autoplay=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
-```
+<iframe src="https://vk.com/video_ext.php?oid=-227681629&id=456239024&hd=2" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 
 [Ссылка](https://vk.com/video-227681629_456239024)
-
