--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -13,21 +13,9 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-::: {.grid style="margin-left:0%"}
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+::::: {.grid style="margin-left:0%"}
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
-
-*11.11.2024 Пшеница*
-
-**Мировое производство пшеницы прирастет Казахстаном**
-
-Экспортные цены на пшеницу за неделю снизились на 2 долл.
-
-Еврокомиссия планирует разобраться с дискриминацией французской пшеницы на алжирских тендерах.
-
-USDA повысило прогноз производство пшеницы в Казахстане на 2 млн т до 18 млн т в 2024/25 г. 
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *05.11.2024 Пшеница*
 
@@ -35,7 +23,7 @@ USDA повысило прогноз производство пшеницы в 
 
 Экспортные цены на пшеницу за неделю снизились на 5 долл.
 
-Китай в 2024 г. ожидает рекордный урожай зерна  - более 700 млн т.
+Китай в 2024 г. ожидает рекордный урожай зерна - более 700 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -47,16 +35,23 @@ USDA повысило прогноз производство пшеницы в 
 
 Турция снизит производство пшеницы в 2024 г. на 5,5% до 20,8 млн т.
 
-Россия в 1,4 раза нарастила поставки пшеницы на рынок Кении в начале 2024/25 г. 
+Россия в 1,4 раза нарастила поставки пшеницы на рынок Кении в начале 2024/25 г.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
+*21.10.2024 Пшеница*
 
+**Россия притормозила казахстанскую пшеницу**
 
+Экспортные цены на пшеницу за неделю выросли на 8 долл.
+
+С 17 октября 2024 г. Россия ввела временные ограничения на импорт пшеницы из Казахстана.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-#### Динамика цен экспортной альтернативы к FOB Новороссийск пшеницы 12,5%, руб./т
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+#### Нетбэк Алтайский край, руб./т
 
 ```{r,warning = FALSE, echo = FALSE, message = FALSE}
 
@@ -91,9 +86,9 @@ hc
 
 [Материалы →](../events/2024-09-13-wheat.qmd)
 :::
-:::
+:::::
 
-::: {.grid style="margin-left:0%"}
+::::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Методология
 
@@ -104,4 +99,4 @@ hc
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 :::
-:::
+:::::
