--- a/index.qmd
+++ b/index.qmd
@@ -40,17 +40,19 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
+**11.11.2024 Пшеница**
+
+Экспортные цены на пшеницу за неделю снизились на 2 долл. Еврокомиссия планирует разобраться с дискриминацией французской пшеницы на алжирских тендерах. USDA повысило прогноз производство пшеницы в Казахстане на 2 млн т до 18 млн т в 2024/25 г.
+
+[Подробнее →](markets/markets-wheat.qmd)
+
+
 **06.11.2024 Подсолнечное масло**
 
 Индийские праздники поддержали цены на масла. Экспортные цены на подсолнечное масло за месяц выросли на 108 долл.
 
 [Подробнее →](markets/markets-oilseed.qmd)
 
-**05.11.2024 Пшеница**
-
-Слабый спрос снижает экспортные цены на пшеницу. Экспортные цены на пшеницу за неделю снизились на 5 долл. Китай в 2024 г. ожидает рекордный урожай зерна - более 700 млн т.
-
-[Подробнее →](markets/markets-wheat.qmd)
 
 **31.10.2024 Сухопутная логистика. Полувагоны**
 
