--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -17,15 +17,27 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*28.10.2024* Уголь
+
+**Рыночные цены опять под давлением**
+
+На рынке Китая наблюдается низкая торговая активность. Ограниченный спрос на уголь и накопленные высокие запасы на складах снова оказывают давление на  угольные цены. На западном направлении наблюдаются сбои экспортных поставок российского угля.
+
+ - Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 150 – 152 долл./т CFR Indonesia, предложение покупателей на рынке КНР – 135 долл./т СFR China, предложение продавцов – 140 долл./т СFR China и выше.
+ - Рассматриваемый уровень цен на марку ГЖ на рынке КНР: предложение покупателей – 140 долл./т СFR China, предложение продавцов – 150 долл./т СFR China.
+
+![](../images/icon-locker.svg){width="6%"}
+
+[Подробнее](../demo-subscription.qmd)
+
 *21.10.2024* Уголь
 
 **Рыночные настроения начали охлаждаться**
 
 Профицит предложения энергетического угля привел к возвращению цен ниже уровня 100 долл./т на уголь 6000 ккал/кг на базисе FOB порты Дальнего Востока.
 
-• Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-145 долл./т СFR China.
-
-• Рассматриваемый уровень цен на марку ГЖ: 155 долл./т СFR China.
+- Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-145 долл./т СFR China.
+- Рассматриваемый уровень цен на марку ГЖ: 155 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"}
 
@@ -35,25 +47,10 @@ format:
 
 **Ожидания и неопределенность на рынке после праздников**
 
-Первая рабочая неделя в Китае встретила участников рынка неопределенностью относительно дальнейшего движения цен. Рост, наблюдаемый до начала празднования Дня образования КНР, воспринимался частью рынка, как спекулятивный и основанный на ожиданиях положительного эффекта от мер поддержки экономики Китая. Участники рынка ожидали, что ясность появится 12 октября после озвучивания плана финансовой поддержки экономики КНР. Однако отсутствие деталей в анонсированных мерах охладило ожидания как инвесторов на финансовых рынках, так и трейдеров относительно будущей стоимости угольной продукции. 
+Первая рабочая неделя в Китае встретила участников рынка неопределенностью относительно дальнейшего движения цен. Рост, наблюдаемый до начала празднования Дня образования КНР, воспринимался частью рынка, как спекулятивный и основанный на ожиданиях положительного эффекта от мер поддержки экономики Китая. Участники рынка ожидали, что ясность появится 12 октября после озвучивания плана финансовой поддержки экономики КНР. Однако отсутствие деталей в анонсированных мерах охладило ожидания как инвесторов на финансовых рынках, так и трейдеров относительно будущей стоимости угольной продукции.
 
 -   Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 145-150 долл./т СFR China.
-
 -   Рассматриваемый уровень цен на марку ГЖ: 153-157 долл./т СFR China.
-
-![](../images/icon-locker.svg){width="6%"}
-
-[Подробнее](../demo-subscription.qmd)
-
-*07.10.2024* Уголь
-
-**Рынок ушел на праздники**
-
-Празднование Дня образования КНР (с 1 по 7 октября 2024 г.) принесло спокойствие на рынок после значительного роста в предпраздничную неделю.
-
--   Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-140 долл./т СFR China, 145 долл./т СFR Malaysia.
-
--   Рассматриваемый уровень цен на марку ГЖ: 150-152 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"}
 
