--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,13 +17,25 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*11.11.2024 Пшеница*
+
+**Мировое производство пшеницы прирастет Казахстаном**
+
+Экспортные цены на пшеницу за неделю снизились на 2 долл.
+
+Еврокомиссия планирует разобраться с дискриминацией французской пшеницы на алжирских тендерах.
+
+USDA повысило прогноз производство пшеницы в Казахстане на 2 млн т до 18 млн т в 2024/25 г. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *05.11.2024 Пшеница*
 
 **Слабый спрос снижает экспортные цены на пшеницу**
 
 Экспортные цены на пшеницу за неделю снизились на 5 долл.
 
-Китай в 2024 г. ожидает рекордный урожай зерна - более 700 млн т.
+Китай в 2024 г. ожидает рекордный урожай зерна  - более 700 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -35,19 +47,11 @@ format:
 
 Турция снизит производство пшеницы в 2024 г. на 5,5% до 20,8 млн т.
 
-Россия в 1,4 раза нарастила поставки пшеницы на рынок Кении в начале 2024/25 г.
+Россия в 1,4 раза нарастила поставки пшеницы на рынок Кении в начале 2024/25 г. 
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*21.10.2024 Пшеница*
 
-**Россия притормозила казахстанскую пшеницу**
-
-Экспортные цены на пшеницу за неделю выросли на 8 долл.
-
-С 17 октября 2024 г. Россия ввела временные ограничения на импорт пшеницы из Казахстана.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
