--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,6 @@ format:
 
 ::::::: grid
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-
 ### Актуальное
 
 8 ноября 2024. Сырьевой индекс ЦЦИ. **Монетарные стимулы не видны в ценах реального рынка**
@@ -40,43 +39,43 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
-**11.11.2024 Пшеница**
+**18.11.2024 Пшеница**
 
-Экспортные цены на пшеницу за неделю снизились на 2 долл. Еврокомиссия планирует разобраться с дискриминацией французской пшеницы на алжирских тендерах. USDA повысило прогноз производство пшеницы в Казахстане на 2 млн т до 18 млн т в 2024/25 г.
+Экспортные цены на пшеницу за неделю снизились на 1 долл. По прогнозам экспертов аграрного рынка квота на экспорт зерна из России в 2025 г. может упасть до 10-12 млн т. Аналитики FranceAgriMer снизили  оценку экспорта мягкой пшеницы из Франции за пределы ЕС в 2024/25 г. на 0,1 млн т до 3,9 млн т. 
 
 [Подробнее →](markets/markets-wheat.qmd)
 
+**18.11.2024 Азотные удобрения**
 
-**06.11.2024 Подсолнечное масло**
+Объявлены результаты индийского тендера на закупку карбамида:Индия забирает 1 млн т карбамида с рынка.
+За пределами Индии мировой спрос на карбамид остается низким. 
 
-Индийские праздники поддержали цены на масла. Экспортные цены на подсолнечное масло за месяц выросли на 108 долл.
+[Подробнее →](markets/markets-fertilizers.qmd)
 
-[Подробнее →](markets/markets-oilseed.qmd)
+**15.11.2024 Сухопутная контейнерная логистика**
+
+Ставки на прямые железнодорожные маршруты из Китая в Россию снизились в ноябре в среднем на 5%. В мультимодальном сообщении стоимость морского фрахта сохраняет тенденцию к продлению, а железнодорожного плеча – к росту.
+
+[Подробнее →](markets/markets-railways.qmd)
 
 
-**31.10.2024 Сухопутная логистика. Полувагоны**
+**14.11.2024 Перевозки нефтепродуктов**
 
-На железнодорожной сети введены ограничения на приём к перевозке порожних вагонов; возможности операторов по предоставлению полувагонов под погрузку ограничены.
-
-[Подробнее →](markets/markets-railways-van.qmd)
-
-**22.10.2024 Перевозки угля**
-
-Ставки фрахта на перевозку угля из Усть-Луги и Тамани в среднем упали на 3% н/н и на 7% н/н соответственно на фоне снижения грузовой базы в портах.
+Ставки фрахта светлых нефтепродуктов оставались стабильными на основных маршрутах, за исключением направления в Западную Индию. На рынке фрахта темных нефтепродуктов зафиксирован умеренный рост ставок на ключевых маршрутах из Черного моря.
 
 [Подробнее →](markets/markets-sea-freight.qmd)
 
-**21.10.2024 Уголь**
+**12.11.2024 Перевозки нефти**
 
-**Рыночные настроения начали охлаждаться**
+Продление сокращения добычи странами ОПЕК+ и снижение экспорта российской нефти будет сдерживать рост фрахтовых ставок. Загрузка портов российской экспортной нефтью снизилась на фоне роста внутренней переработки нефти и профилактических работ в Новороссийске».
 
-Профицит предложения энергетического угля привел к возвращению цен ниже уровня 100 долл./т на уголь 6000 ккал/кг на базисе FOB порты Дальнего Востока.
+[Подробнее →](markets/markets-sea-freight.qmd)
 
-[Подробнее →](markets/markets-coal.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-### Сырьевой индекс ЦЦИ                      [→](pbc-index.qmd)
+### Сырьевой индекс ЦЦИ   [→](pbc-index.qmd)
 
 -- сводный индекс цен российского сырьевого экспорта. Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
 
