--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -13,9 +13,18 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-:::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
+
+*05.11.2024* Уголь
+
+**На рынке наблюдается относительная стабильность**
+
+Уголь марки PCI из России поставляется в ограниченном количестве, и на рынке уже несколько недель ощущается его дефицит. Перевозка энергетических углей в Китай остаётся невыгодной. С каждым днём цены на энергетический уголь снижаются на 1-2 юаня. Уголь марки ГЖ остаётся в прежней ценовой категории и демонстрирует стабильность. Тем не менее, энергетические угли пользуются хорошим спросом на рынке Южной Кореи, даже по более высоким ценам.
+
+- Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 156 – 157 долл./т CFR Vietnam, 137 – 140 CFR China
+- Рассматриваемый уровень цен на энергетический уголь 5500 NAR FOB Дальний восток в Южную Корею: 105-110 долл./т
 
 *28.10.2024* Уголь
 
@@ -38,19 +47,6 @@ format:
 
 - Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-145 долл./т СFR China.
 - Рассматриваемый уровень цен на марку ГЖ: 155 долл./т СFR China.
-
-![](../images/icon-locker.svg){width="6%"}
-
-[Подробнее](../demo-subscription.qmd)
-
-*14.10.2024* Уголь
-
-**Ожидания и неопределенность на рынке после праздников**
-
-Первая рабочая неделя в Китае встретила участников рынка неопределенностью относительно дальнейшего движения цен. Рост, наблюдаемый до начала празднования Дня образования КНР, воспринимался частью рынка, как спекулятивный и основанный на ожиданиях положительного эффекта от мер поддержки экономики Китая. Участники рынка ожидали, что ясность появится 12 октября после озвучивания плана финансовой поддержки экономики КНР. Однако отсутствие деталей в анонсированных мерах охладило ожидания как инвесторов на финансовых рынках, так и трейдеров относительно будущей стоимости угольной продукции.
-
--   Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 145-150 долл./т СFR China.
--   Рассматриваемый уровень цен на марку ГЖ: 153-157 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"}
 
@@ -102,4 +98,4 @@ hc
 
 [Спецификация угольных котировок](../methodology/specs-coal.qmd)
 :::
-::::::
+:::
