--- a/markets/markets-fertilizers.qmd
+++ b/markets/markets-fertilizers.qmd
@@ -13,9 +13,28 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
+
+*18.11.2024 Азотные удобрения*
+
+**Один в поле не воин**
+
+Объявлены результаты индийского тендера на закупку карбамида:Индия забирает 1 млн т карбамида с рынка.
+За пределами Индии мировой спрос на карбамид остается низким. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
+*11.11.2024 Азотные удобрения*
+
+**Разворот цен на карбамид**
+
+За пределами Индии фиксируется низкая рыночная активность. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 
 *02.11.2024 Азотные удобрения*
 
@@ -24,20 +43,6 @@ format:
 Indian Potash Limited 29 октября объявила новый тендер на закупку карбамида.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*28.10.2024 Азотные удобрения*
-
-**Рынок карбамида замер в ожидании нового тендера в Индии**
-
-Участники рынка ожидают объявление очередного индийского тендера на импорт карбамида в течение 2 недель.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*21.10.2024 Азотные удобрения*
-
-**Рынок карбамида переваривает итоги индийского тендера**
-
-В текущем тендере индийская RCF закупила 569 тыс. т карбамида у 10 компаний. 9 поставщиков повезут груз на восток, 1 поставщик – на запад.
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -70,7 +75,7 @@ hc
 
 ```
 :::
-:::::
+:::
 
 ### Методология
 
