--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -12,9 +12,21 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-:::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
+
+*13.11.2024 Нефть*
+
+**Дисконт ESPO упал до минимумов 2024 г. вслед за Urals**
+
+По итогам предыдущей недели стоимость российской нефти выросла. Цены на Urals увеличились более чем на 4,0% н/н, цена на ESPO выросла более чем на 2,0% н/н.
+
+Дисконт на ESPO FOB Kozmino сузился на 15,8% и обновил минимальное значение за текущий год.
+
+Морской экспорт российской нефти за отчетную неделю увеличился на 15,8% на фоне возобновившихся поставок из порта "Новороссийск".
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *06.11.2024 Нефть*
 
@@ -25,18 +37,6 @@ format:
 Дисконт на ESPO FOB Kozmino сузился на 17,7% и достиг минимального значения за текущий год.
 
 Морской экспорт российской нефти за отчетную неделю снизился на 8,8% на фоне увеличения внутренней переработки нефти.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*30.10.2024 Нефть*
-
-**Дисконты Urals вновь на минимумах 2024 г.**
-
-По итогам предыдущей недели динамика стоимости российской нефти стала разнонаправленной. Цены на Urals увеличились на 0,4% н/н, в то время как цена на ESPO снизилась более чем на 0,8% н/н.
-
-Дисконт на Urals FOB Primorsk сузился на 2,9% из-за коррекции скидок покупателям компаниями и достиг минимального значения за текущий год.
-
-Морской экспорт российской нефти за отчетную неделю вырос на 1,8% на фоне снижения внутренней переработки и роста отгрузок нефти с арктических месторождений.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
@@ -55,7 +55,7 @@ df$date <- as.Date(df$date, origin = "1899-12-30")
 hc = highchart() %>% 
    hc_add_series(df, type = "line", hcaes(x = date, y = value), 
                  color = c("#1A4AFC"), 
-                 name = c("Идекс цен на нефть")) %>% 
+                 name = c("Индекс цен на нефть")) %>% 
    hc_xAxis(type = 'datetime') %>% 
    hc_yAxis(title  = list(text = '')) %>% 
    hc_exporting(enabled = FALSE) %>% 
@@ -84,4 +84,4 @@ hc
 
 [Спецификация котировок на нефть](../methodology/specs-oil.qmd)
 :::
-::::::
+:::
