--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -13,9 +13,19 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-::::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
+
+*15.11.2024*
+
+**Ставки на железнодорожные и мультимодальные перевозки из КНР в РФ разошлись в динамике.**
+
+-   Ставки на прямые железнодорожные маршруты из Китая в Россию снизились в ноябре в среднем на 5%. В мультимодальном сообщении стоимость морского фрахта сохраняет тенденцию к продлению, а железнодорожного плеча к росту.
+-   На сети РЖД сократились объёмы пропуска контейнерных поездов в восточном направлении: ставки на перевозку 40-футового контейнера из Москвы во Владивосток выросли за месяц более чем на 50% и превысили 160 тыс. руб.
+-   В октябре впервые за более чем 2 года перевозки контейнеров по сети РЖД снизились в годовом выражении. Из-за загруженности инфраструктуры введены ограничения на погрузку контейнерных грузов в адрес отдельных станций Московского и Екатеринбургского ж.-д. узлов.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *18.10.2024*
 
@@ -26,6 +36,8 @@ format:
 -   Темпы прироста контейнерных перевозок по сети РЖД снизились в сентябре до +1,9% г/г. На железной дороге фиксируются массовые отставления поездов от движения, сохраняются проблемы вывоза контейнеров из дальневосточных портов и с сухопутных пограничных переходов.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -37,7 +49,7 @@ library(highcharter)
 library(openxlsx)
 library(tidyr)
 
-df <- read.xlsx(xlsxFile = '../xls/График_жд контейнеры.xlsx', sheet = 1, detectDates = TRUE, startRow = 1) 
+df <- read.xlsx(xlsxFile = '../xls/График на сайт - ЖД.xlsx', sheet = "Контейнеры", detectDates = TRUE, startRow = 1) 
 names(df) <- c('dt', 'value')
 df[,3] <- NULL
 df$dt = as.Date(as.numeric(df$dt), origin = "1899-12-30")
@@ -75,4 +87,4 @@ hc
 
 [Спецификация ставок сухопутной логистики](../methodology/specs-logistics.qmd)
 :::
-:::::::
+:::
