--- a/markets/markets-sea-freight.qmd
+++ b/markets/markets-sea-freight.qmd
@@ -17,35 +17,35 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*30.10.2024 Перевозки нефти*
+*14.11.2024 Перевозки нефтепродуктов*
 
-**Рынок реагирует на ослабление ближневосточного кризиса**
+**Рекордный экспорт темных нефтепродуктов поддерживает ставки**
 
-Снижение уровня эскалации на Ближнем Востоке понижательно влияет на рынок нефтяного фрахта. Загрузка портов российской экспортной нефтью сохранилась на уровне прошлой недели.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*30.10.2024 Перевозки нефтепродуктов*
-
-**Налоговая реформа Китая ударит по импорту мазута**
-
-Ставки на перевозку светлых нефтепродуктов восстанавливаются с минимальных значений. Темные ставки стабильны. Китай планирует реформу налоговой системы, что увеличит стоимость импортируемого мазута и создаст риски для закупок российской продукции независимыми НПЗ.
+Ставки фрахта светлых нефтепродуктов оставались стабильными на основных маршрутах, за исключением направления в Западную Индию. На рынке фрахта темных нефтепродуктов зафиксирован умеренный рост ставок на ключевых маршрутах из Черного моря.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*29.10.2024 Перевозки угля*
+*12.11.2024 Перевозки нефти*
 
-**Осеннее падение спроса держит ставки на дне**
+**Конец ремонтов в Новороссийске и Турции помог фрахту вырасти**
 
-Стоимость перевозки угля сухогрузами класса Capesize (180 тыс. т) из Тамани в Индию и Китай упала на 23% н/н и на 28% н/н соответственно из-за низкого спроса на уголь в странах-импортерах.
+Продление сокращения добычи странами ОПЕК+ и снижение экспорта российской нефти будет сдерживать рост фрахтовых ставок. Загрузка портов российской экспортной нефтью снизилась на фоне роста внутренней переработки нефти и профилактических работ в Новороссийске».
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*12.11.2024 Перевозки угля*
+
+**Высокие запасы угля ограничат сезонный рост ставок**
+
+В третьей декаде ноября участники рынка ожидают увеличения спроса на уголь и восстановления ставок фрахта до летнего уровня. Ставка фрахта по маршруту «Восточный-Северный Китай» упала на 11% н/н.
 
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 
-*29.10.2024 Перевозки зерна*
+*11.11.2024 Перевозки зерна*
 
-**Coaster и Handysize движутся в противоположные стороны**
+**Каспийское море радует ростом в ноябре**
 
-Стоимость транспортировки зерна балкерами типа Handysize выросла на 5,6% н/н. Ставки фрахта для балкеров типа Coaster в Турцию снизились на 3,7% н/н.
+Ставки фрахта для балкеров типа Handysize в Черном море продолжают снижаться, стоимость перевозки зерна балкерами типа Coaster в порты Египта и Турции упала на 7% н/н.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
